--- a/cars.html
+++ b/cars.html
@@ -7,6 +7,7 @@
   <title>Гонки</title>
 </head>
 <body>
+  привет
   <script src="https://code.jquery.com/jquery-3.6.3.js"></script>
   <script>
     // создаем конструктор
