--- a/canvas.html
+++ b/canvas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <canvas id="canvas" width="500" height="300"></canvas>
+  <script src="https://code.jquery.com/jquery-3.6.3.js"></script>
   <script>
     let canvas = document.getElementById('canvas')
     let ctx = canvas.getContext('2d')
@@ -148,19 +149,33 @@
     // drawSnowman(100,150)
 
     // функция которая соединяет точки массива
-    let points = [[50,50],[50,100],[100,100],[100,50],[50,50]]
-    let mysteryPoints = [[50,50],[50,100],[25,120],[100,50],[70,90],[100,90],[70,120]]
+    // let points = [[50,50],[50,100],[100,100],[100,50],[50,50]]
+    // let mysteryPoints = [[50,50],[50,100],[25,120],[100,50],[70,90],[100,90],[70,120]]
 
-    let drawPoints = function(mysteryPoints) {
+    // let drawPoints = function(mysteryPoints) {
+    //   ctx.beginPath()
+    //   for (let i=0; i<6; i++) {
+    //     ctx.moveTo(mysteryPoints[i][0],mysteryPoints[i][1])
+    //     ctx.lineTo(mysteryPoints[i+1][0],mysteryPoints[i+1][1])
+    //     console.log(mysteryPoints[i])
+    //   }
+    //   ctx.stroke()
+    // }
+    // drawPoints(mysteryPoints)
+
+
+    // рисование мышкой
+    let x =0
+    let y=0
+    $("html").mousemove(function (event) {
+      x=event.pageX;
+      y=event.pageY;
       ctx.beginPath()
-      for (let i=0; i<6; i++) {
-        ctx.moveTo(mysteryPoints[i][0],mysteryPoints[i][1])
-        ctx.lineTo(mysteryPoints[i+1][0],mysteryPoints[i+1][1])
-        console.log(mysteryPoints[i])
-      }
+      ctx.arc(x,y,3, 0, Math.PI * 2, false)
       ctx.stroke()
-    }
-    drawPoints(mysteryPoints)
+      ctx.lineWidth = 1
+      ctx.fill()
+    });
   </script>
 </body>
 </html>
